minor fixes, doc updates